# mono-repos

bazel-poc/: .bazelrc  BUILD.bazel  Makefile  README.md  WORKSPACE
bazel-poc/.github/workflows/: ci.yml
bazel-poc/demo/: BUILD.bazel  build.gradle  run_spring.sh
bazel-poc/demo/src/main/java/com/example/demo/: Item.java  ItemController.java
bazel-poc/fastapi/: BUILD.bazel  requirements.txt
bazel-poc/fastapi/app/: main.py
bazel-poc/fastapi/app/routers/: items.py
bazel-poc/fastapi/tests/: test_items.py
bazel-poc/frontend/: BUILD.bazel
bazel-poc/frontend/src/: App.jsx
bazel-poc/frontend/src/components/: ItemsList.jsx
bazel-poc/scripts/: run-all.sh  setup-env.sh
kafka/: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  docker-compose.yml  examples.py  requirements.txt
kafka/app/: main.py
kafka/app/api/: __init__.py  health.py  orders.py
kafka/app/consumers/: __init__.py  order_consumer.py
kafka/app/core/: __init__.py  kafka_consumer.py  kafka_producer.py
kafka/app/models/: __init__.py  order.py
kafka/app/services/: __init__.py  order_producer.py
kafka/scripts/: run_consumer.py  send_test_orders.py
practise/: Kafka.docx  main.py
practise/databases/: test.py
practise/optimisations/: memory_contentions.py  python_gil.py
practise/optimisations/recreate_complex_scenario/: main.py  requirements.txt  sample_data.csv
practise/url_shortener/config/: settings.py
practise/url_shortener/database/: mongodb.py
profilers/: .gitignore  PROFILERS_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  comparison_demo.py  help.py  pandas_profiling_demo.py  polars_profiling_demo.py  profiler_guide_interactive.py  py_spy_instructions.md  quick_benchmark.py  requirements.txt  run_all_demos.py  sample_data.py  scaling_analysis.py  test_setup.py
task-queue-cpu-intesive/: .env.example  .gitignore  README-ARCHITECTURE.md  README.md  docker-compose.yml
task-queue-cpu-intesive/.github/: copilot-instructions.md
task-queue-cpu-intesive/celery-worker/: Dockerfile  calculations.py  main.py  requirements.txt  tasks.py
task-queue-cpu-intesive/docs/: ID-FLOW-EXPLANATION.md  MY-LEARNING-JOURNEY.md  PHASE-2-COMPLETION.md  PHASE-2-QUICK-REFERENCE.md  TEST-REPORT.md  TESTING-GUIDE.md
task-queue-cpu-intesive/fastapi-app/: Dockerfile  main.py  requirements.txt
task-queue-cpu-intesive/fastapi-app/api/: routes.py
task-queue-cpu-intesive/fastapi-app/core/: __init__.py  config.py  exceptions.py  logging.py
task-queue-cpu-intesive/fastapi-app/models/: __init__.py  requests.py  responses.py
task-queue-cpu-intesive/fastapi-app/services/: queue_service.py  task_service.py
task-queue-cpu-intesive/nginx/: nginx.conf
task-queue-cpu-intesive/redis/: redis.conf
task-queue-cpu-intesive/scripts/: run-all-tests.sh  test-baseline.sh  test-memory-leak.sh  test-nginx-failure.sh  test-redis-failure.sh  test-security.sh  test-thundering-herd.sh  test-worker-failure.sh  validate-infrastructure.sh
