load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

py_binary(
    name = "server",
    srcs = ["app/main.py"],
    main = "app/main.py",
    deps = [
        requirement("fastapi"),
        requirement("uvicorn"),
    ],
    data = glob(["app/**/*.py"]),
)

py_test(
    name = "test_python",
    srcs = glob(["tests/**/*.py"]),
    deps = [
        ":server",
        requirement("pytest"),
        requirement("httpx"),
    ],
)
